# frisk

./: .gitignore  LAUNCH.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: continuous-verify.yml
examples/clean-skill/: SKILL.md
examples/malicious-skill/: SKILL.md
src/frisk/: __init__.py  cli.py  engine.py  mcp_server.py  pin.py  report.py  rules.py  sources.py
tests/: test_engine.py  test_pin.py
